--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.5"
   }
 }
